--- a/olifir.html
+++ b/olifir.html
@@ -16,7 +16,9 @@
 		<div class="container container--has-aside">
 			<main class="content">
 				<h1 class="content__title">Страница создана Олифир Алиной</h1>
-				<p class="content__text">Анекдот</p>
+				<p class="content__text">Был сегодня на собеседовании в компании.
+Менеджер дал мне ноутбук и сказал:
+"Попробуй-ка мне его продать... ". Ну, я взял ноут и ушел. Когда я пришел домой мне позвонил менеджер и стал истерично кричать: "Немедленно верни мой ноут обратно! " Я ответил: "200 баксов и он Ваш... " </p>
 				<img class="content__image" src="./Images/station.jpg" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
