--- a/bashkatova.html
+++ b/bashkatova.html
@@ -16,7 +16,12 @@
 		<div class="container container--has-aside">
 			<main class="content">
 				<h1 class="content__title">Страница создана Башкатовой Анной</h1>
-				<p class="content__text">Анекдот</p>
+				<p class="content__text">Грузинская школа. Учитель:
+<p>- Дэти,чито такое бирюк? Говори, Вано.</p>
+<p>- Бирюк - ето такой чэловэк!</p>
+<p>- Нэт, Вано, садись. Гоги?</p>
+<p>- Бирюк - ето такой зивер!</p>
+<p>- Нэт, Гоги! Бирюк - ето то же, что и штани, но со стрельками.</p>
 				<img class="content__image" src="./Images/station.jpg" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
