--- a/malchevskaya.html
+++ b/malchevskaya.html
@@ -16,7 +16,7 @@
 		<div class="container container--has-aside">
 			<main class="content">
 				<h1 class="content__title">Страница создана Мальчевской Полиной</h1>
-				<p class="content__text">Анекдот</p>
+				<p class="content__text">В общаге на вечеринке студентов мне приглянулся парень. Очень приглянулся. Стреляла глазками сквозь толпу. Он стрелял тоже. Потом неожиданно оказался рядом и сказал:"Я женат. Классная вечеринка!" Я выпала в осадок, и решив не вдаваться в подробности его супружеской жизни,просто испарилась в толпе. Спустя пару недель я узнала, что его зовут Жанат.Имя такое.Казахское.</p>
 				<img class="content__image" src="./Images/station.jpg" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
