--- a/bashkatova.html
+++ b/bashkatova.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<div class="header__container"><a href="index.html" rel="home"><img class="header__logo" src="./Images/logo.png" alt="Логотип"/></a>
+			<div class="header__container"><a href="index.html" rel="home"><img class="header__logo" src="./Images/anna.png" alt="Логотип"/></a>
 				<h1 class="header__title">Анекдоты.ру</h1>
 			</div>
 		</header>
