--- a/olifir.html
+++ b/olifir.html
@@ -19,7 +19,7 @@
 				<p class="content__text">Был сегодня на собеседовании в компании.
 Менеджер дал мне ноутбук и сказал:
 "Попробуй-ка мне его продать... ". Ну, я взял ноут и ушел. Когда я пришел домой мне позвонил менеджер и стал истерично кричать: "Немедленно верни мой ноут обратно! " Я ответил: "200 баксов и он Ваш... " </p>
-				<img class="content__image" src="./Images/station.jpg" alt="Вид на станцию"/>
+				<img class="content__image" src="./Images/emoticon-1610518_1280.webp" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
 			<div class="sidebar__menu">
