--- a/malchevskaya.html
+++ b/malchevskaya.html
@@ -17,7 +17,7 @@
 			<main class="content">
 				<h1 class="content__title">Страница создана Мальчевской Полиной</h1>
 				<p class="content__text">В общаге на вечеринке студентов мне приглянулся парень. Очень приглянулся. Стреляла глазками сквозь толпу. Он стрелял тоже. Потом неожиданно оказался рядом и сказал:"Я женат. Классная вечеринка!" Я выпала в осадок, и решив не вдаваться в подробности его супружеской жизни,просто испарилась в толпе. Спустя пару недель я узнала, что его зовут Жанат.Имя такое.Казахское.</p>
-				<img class="content__image" src="./Images/station.jpg" alt="Вид на станцию"/>
+				<img class="content__image" src="./Images/смайлик.jpg" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
 			<div class="sidebar__menu">
