--- a/bashkatova.html
+++ b/bashkatova.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<div class="header__container"><a href="index.html" rel="home"><img class="header__logo" src="./Images/anna.png" alt="Логотип"/></a>
+			<div class="header__container"><a href="index.html" rel="home"><img class="header__logo" src="./Images/logo.png" alt="Логотип"/></a>
 				<h1 class="header__title">Анекдоты.ру</h1>
 			</div>
 		</header>
@@ -22,7 +22,7 @@
 <p>- Нэт, Вано, садись. Гоги?</p>
 <p>- Бирюк - ето такой зивер!</p>
 <p>- Нэт, Гоги! Бирюк - ето то же, что и штани, но со стрельками.</p>
-				<img class="content__image" src="./Images/station.jpg" alt="Вид на станцию"/>
+				<img class="content__image" src="./Images/anna.png" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
 			<div class="sidebar__menu">
