--- a/bashkatova.html
+++ b/bashkatova.html
@@ -22,7 +22,7 @@
 <p>- Нэт, Вано, садись. Гоги?</p>
 <p>- Бирюк - ето такой зивер!</p>
 <p>- Нэт, Гоги! Бирюк - ето то же, что и штани, но со стрельками.</p>
-				<img class="content__image" src="./Images/anna.png" alt="Вид на станцию"/>
+				<img class="content__image" src="./Images/anna.jpg" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
 			<div class="sidebar__menu">
