--- a/sokolova.html
+++ b/sokolova.html
@@ -17,16 +17,16 @@
 			<main class="content">
 				<h1 class="content__title">Страница создана Соколовой Марины</h1>
 				<p class="content__text">Урок математики в грузинской школе.</p>
-<p Учитель:</p>
-<p - Гога, сколько будет дважды два?</p>
-<p - Три.</p>
-<p Учитель:</p>
-<p - Нет, не правилно. Садыс, два! Вано, сколько будет дважды два?</p>
-<p - Четыре.</p>
-<p Учитель:</p>
-<p - Нет. Неверно. Садыс, два! Вахтанг, сколько будет дважды два?</p>
-<p - Семь!</p>
-<p - Да, совершенно верно! Сем-восем... где-то так...</p>
+<p> Учитель:</p>
+<p> - Гога, сколько будет дважды два?</p>
+<p> - Три.</p>
+<p> Учитель:</p>
+<p> - Нет, не правилно. Садыс, два! Вано, сколько будет дважды два?</p>
+<p> - Четыре.</p>
+<p> Учитель:</p>
+<p> - Нет. Неверно. Садыс, два! Вахтанг, сколько будет дважды два?</p>
+<p> - Семь!</p>
+<p> - Да, совершенно верно! Сем-восем... где-то так...</p>
 				<img class="content__image" src="./Images/station.jpg" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
