--- a/sokolova.html
+++ b/sokolova.html
@@ -27,7 +27,7 @@
 <p> - Нет. Неверно. Садыс, два! Вахтанг, сколько будет дважды два?</p>
 <p> - Семь!</p>
 <p> - Да, совершенно верно! Сем-восем... где-то так...</p>
-				<img class="content__image" src="./Images/station.jpg" alt="Вид на станцию"/>
+				<img class="content__image" src="./Images/4j.gif" alt="Вид на станцию"/>
 			</main>
       		<aside class="sidebar">
 			<div class="sidebar__menu">
