--- a/sokolova.html
+++ b/sokolova.html
@@ -17,6 +17,7 @@
 			<main class="content">
 				<h1 class="content__title">Страница создана Соколовой Марины</h1>
 				<p class="content__text">Урок математики в грузинской школе.</p>
+<p> Соколова Марина</p>				
 <p> Учитель:</p>
 <p> - Гога, сколько будет дважды два?</p>
 <p> - Три.</p>
